# APPPRS

./: .gitignore  README.md
2015/: README.md
2015/admin/: accespoint.sh  rosxubuntu.dpkg
2015/workspace/src/appprs_main/: CMakeLists.txt
2015/workspace/src/appprs_main/config/: rviz.rviz
2015/workspace/src/appprs_main/launch/: amcl_live.launch  amcl_playback.launch  dead_reckoning.launch  full_scan.launch  integrated_launch.launch  playback_gmapping.launch  record_waypoints.launch  remote_control.launch  sensor_record.launch
2015/workspace/src/appprs_main/maps/: config_gazebo_models.sh
2015/workspace/src/appprs_main/node/: goal_updater_node.cpp  pcl_cluster.cpp  point_cloud_filter.cpp  scan_to_point_cloud.cpp
2015/workspace/src/appprs_main/scripts/: createGoalFile.py  fix_laser_bags.py
2015/workspace/src/appprs_main/src/: PIDSteerCntrl.cpp  localPP.cpp  p_control_path_planner.cpp  talker.cpp
2015/workspace/src/appprs_main/srv/: PcntrlPP.srv  localPP_SRV.srv  worldToRobot.srv
2015/workspace/src/beginner_tutorials/: package.xml
2015/workspace/src/my_controller_pkg/: my_controller.yaml
Arduino/arduino_odometry/: arduino_odometry.ino
Arduino/arduino_odometry_little_car/: arduino_odometry_little_car.ino
admin/: accespoint.sh  hostapd.conf  rosxubuntu.dpkg  wificlient.sh
doc/: README.md
pcl_workspace/src/pcl_filter/: CMakeLists.txt  package.xml
pcl_workspace/src/pcl_filter/src/: pcl_cluster.cpp  pcl_filter.cpp
src/ros_car/: 99-ros-car.rules  CMakeLists.txt  package.xml
src/ros_car/include/: gazebo_ros_car_drive.h  waypoints_navi.hpp
src/ros_car/launch/: amcl_demo.launch  bag_Playback.launch  filtered_scan.launch  follower.launch  gazebo.launch  gmapping_demo.launch  hokuyo_node.launch  ros_car_real.launch  rosserial_test.launch  sim.launch  test.launch  waypoint_provider.launch
src/ros_car/launch/includes/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml  velocity_smoother.launch.xml
src/ros_car/maps/: track_map.pgm  track_map.yaml  track_map_NY.yaml.pgm  track_map_NY.yaml.yaml  track_map_NY2.pgm  track_map_NY2.yaml  track_map_NY3.pgm  track_map_NY3.yaml  track_map_pgh.pgm  track_map_pgh.yaml  track_map_waypoints (works).yaml  track_map_waypoints.yaml  track_map_waypoints_2.yaml  track_map_waypoints_NY3.yaml  track_map_waypoints_NY3_back.yaml  track_map_waypoints_NY3_red.yaml  track_map_waypoints_NY3_simple.yaml  track_map_waypoints_pgh.yaml
src/ros_car/models/: pioneer2dx.sdf  ros_car.xacro
src/ros_car/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  lidar_filter.yaml  local_costmap_params.yaml  move_base_params.yaml  ros_car_cmd_vel_mux_config.yaml
src/ros_car/src/: gazebo_ros_car_drive.cpp  ros_car_ackermann_publisher.cpp  ros_car_navigation_goals.cpp  ros_car_odometry_publisher.cpp  ros_car_teleop.cpp  waypoint_provider.cpp  waypoint_provider_main.cpp  waypoints_navi.cpp  waypoints_navi_main.cpp  yaml_parser.cpp
src/ros_car/src/ros_car_arduino_ino/: ros_car_arduino_ino.ino
src/ros_car/src/steer_servo_test_ino/: steer_servo_test_ino.ino
src/ros_car/worlds/: aprs_race_track.world
workspace/doc/: simulation.txt
workspace/src/appprs_main/: CMakeLists.txt  package.xml
workspace/src/appprs_main/circleFit/: CircleFitByTaubin.cpp  TestAlgebraicCircleFits.cpp  classify_legs.py
workspace/src/appprs_main/config/: 6_clusters.rviz  amcl.rviz  particle_filter.rviz  rviz.rviz
workspace/src/appprs_main/include/appprs_main/: GoalPositionUpdater.h  MiddleMan.h  localPP.h  particlefilter.h  singleparticle.h  tunable_parameters.h
workspace/src/appprs_main/launch/: ParticleFilter.launch  amcl_live.launch  amcl_playback.launch  dead_reckoning.launch  gmapping.launch  hokuyo.launch  hokuyo_small.launch  integrated_launch.launch  main.launch  main_playback.launch  playback_gmapping.launch  record_waypoints.launch  robo_stats.launch  robostats_playback_launch  scan_lap.launch  scanner.launch
workspace/src/appprs_main/launch/simulation/: gazebo_ny-track.launch  ny_real_track.launch
workspace/src/appprs_main/maps/: config_gazebo_models.sh  wean_map_rot.yaml
workspace/src/appprs_main/maps/cmu_baker/: map.yaml  waypoints.txt
workspace/src/appprs_main/maps/cmu_baker/rosbag/run2/: map.pgm
workspace/src/appprs_main/maps/cmu_level1/: map.pgm  waypoints.txt
workspace/src/appprs_main/maps/fair/run02/: waypoints.txt
workspace/src/appprs_main/maps/models/car_04-25/: model.sdf
workspace/src/appprs_main/maps/models/sample_car/: model.sdf
workspace/src/appprs_main/maps/models/track_04-25/: model.sdf
workspace/src/appprs_main/maps/track/: model.config  model_1-4.sdf  ny_track.world
workspace/src/appprs_main/maps/track/sample_car/: model.config  model.sdf
workspace/src/appprs_main/node/: arduinoListener.cpp  classify_legs.py  extract_features.cpp  goal_updater_node.cpp  point_cloud_filter.cpp  scan_to_point_cloud.cpp  trained_leg_svm_classifier.pkl
workspace/src/appprs_main/scripts/: fake_odom_base_tf.py  fix_laser_bags.py
workspace/src/appprs_main/src/: GoalPositionUpdater.cpp  JoystickMiddleman.cpp  MiddleMan.cpp  PIDSteerCntrl.cpp  P_control_path_planner.cpp  classify_legs_client.cpp  image_read_test.cpp  localPP.cpp  p_control_path_planner.cpp  particle_filter_main.cpp  particlefilter.cpp  servoTester.cpp  singleparticle.cpp  singleparticle.h  world_to_robot_frame.cpp
workspace/src/appprs_main/srv/: ClassifyLegs.srv
workspace/src/beginner_tutorials/: CMakeLists.txt
workspace/src/beginner_tutorials/msg/: int32Arrays.msg
workspace/src/beginner_tutorials/src/: arduinoListener.cpp  listener.cpp  servoTester.cpp  talker.cpp
workspace/src/kf_tracker/: CMakeLists.txt
workspace/src/kf_tracker/src/: KFTracker.pro  featureDetection.cpp  main.cpp
workspace/src/my_controller_pkg/: manifest.xml
workspace/src/my_controller_pkg/src/: my_controller_file.cpp
workspace/src/mybot_description/urdf/: macros.xacro
workspace/src/mybot_gazebo/launch/: mybot_world.launch
workspace/src/pcl_filter/: CMakeLists.txt  package.xml
workspace/src/pcl_filter/src/: pcl_cluster.cpp
(+13 files in other folders)
